--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     </div>
   </header>
 
-  <div class="section" style="background-color: #fff; margin-top: -30px; height: 100vh;">
+  <div class="section" style="background-color: #fff; height: 100vh;">
     <div class="columns">
 
       <main class="column">
@@ -234,7 +234,7 @@
                 <p style="text-align:center; width:100%">Pemasukan Iuran</p>
                 <a href="iuran.html" class="button is-link" style="">Detail</a>
               </div>
-              <div class="panel-block" style="width:100%; height:325px;">
+              <div class="panel-block" style="width:100%;">
                 <div class="columns is-multiline">
                   <div class="column is-12" style="width:100%">
                     <div class="box notification is-primary" style="width:100%">
@@ -300,7 +300,7 @@
                 <p style="text-align:left; width:100%">SK Masuk</p>
                 <a href="sk.html" class="button is-link" style="">Detail</a>
               </div>
-              <div class="panel-block" style="width:100%; height:325px;">
+              <div class="panel-block" style="width:100%;">
                 <div id="content">
                   <div id="thermometer">
                     <div class="track">
@@ -323,7 +323,7 @@
                 <a href="sk.html" class="button is-link" style="">Detail</a>
               </div>
               <div class="panel-block" style="width:100%">
-                <canvas id="myChart"></canvas>
+                <canvas id="myChart" height="142px"></canvas>
                 <div id="myChart"></div>
               </div>
             </div>
