--- a/iuran.html
+++ b/iuran.html
@@ -87,25 +87,130 @@
             General
           </p>
           <ul class="menu-list">
-            <li><a class="is-active" href="#"><span class="icon is-small"><i class="fa fa-tachometer"></i></span> Dashboard</a></li>
+            <li><a class="is-active" href="#"><span class="icon is-small"><i class="fa fa-tachometer"></i></span> Iuran</a></li>
+            <li><a href="#"><span class="icon is-small"><i class="fa fa-pencil-square-o"></i></span> SK Masuk</a></li>
+            <li><a href="#"><span class="icon is-small"><i class="fa fa-desktop"></i></span> Tangguhan</a></li>
+            <li><a href="#"><span class="icon is-small"><i class="fa fa-table"></i></span> Kelebihan Bayar</a></li>  
           </ul>
           <p class="menu-label">
-            Administration
+            Filter Pada All Table
           </p>
           <ul class="menu-list">
-            <li><a href="#"><span class="icon is-small"><i class="fa fa-pencil-square-o"></i></span> Forms</a></li>
-            <li><a href="#"><span class="icon is-small"><i class="fa fa-desktop"></i></span> UI Elements</a></li>
-            <li><a href="#"><span class="icon is-small"><i class="fa fa-table"></i></span> Tables</a></li>            
-            <li><a href="#"><span class="icon is-small"><i class="fa fa-bar-chart"></i></span> Presentations</a></li>
-
-            <li>
-              <a class=""><i class="fa fa-cog"></i> Settings</a>
-              <ul>
-                <li><a>Members</a></li>
-                <li><a>Plugins</a></li>
-                <li><a>Add a member</a></li>
-              </ul>
-            </li>
+            <nav class="panel">
+                <a class="panel-block" style="">
+                    Sisa Iuran
+                    <div class="control" style="">
+                        <div class="select is-fullwidth">
+                            <select>
+                                <option>10%</option>
+                                <option>20%</option>
+                                <option>30%</option>
+                                <option>40%</option>
+                                <option>50%</option>
+                                <option>60%</option>
+                                <option>70%</option>
+                                <option>80%</option>
+                                <option>90%</option>
+                                <option>100%</option>
+                            </select>
+                        </div>
+                    </div>
+                </a>
+                <a class="panel-block" style="">
+                    Rentang Iuran
+                    <div class="columns">
+                        <div class="column is-5">
+                            <div class="control" style="">
+                                <div class="select">
+                                    <select>
+                                        <option>1</option>
+                                        <option>2</option>
+                                        <option>3</option>
+                                        <option>4</option>
+                                        <option>5</option>
+                                        <option>6</option>
+                                        <option>7</option>
+                                        <option>8</option>
+                                        <option>9</option>
+                                        <option>10</option>
+                                        <option>11</option>
+                                        <option>12</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="column is-7">
+                            <div class="control" style="">
+                                <div class="select">
+                                    <select>
+                                        <option>2010</option>
+                                        <option>2011</option>
+                                        <option>2012</option>
+                                        <option>2013</option>
+                                        <option>2014</option>
+                                        <option>2015</option>
+                                        <option>2016</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <p style="margin-top:-15px; margin-bottom:10px;">Sampai</p>
+                    <div class="columns">
+                        <div class="column is-5">
+                            <div class="control" style="">
+                                <div class="select">
+                                    <select>
+                                        <option>1</option>
+                                        <option>2</option>
+                                        <option>3</option>
+                                        <option>4</option>
+                                        <option>5</option>
+                                        <option>6</option>
+                                        <option>7</option>
+                                        <option>8</option>
+                                        <option>9</option>
+                                        <option>10</option>
+                                        <option>11</option>
+                                        <option>12</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="column is-7">
+                            <div class="control" style="">
+                                <div class="select">
+                                    <select>
+                                        <option>2010</option>
+                                        <option>2011</option>
+                                        <option>2012</option>
+                                        <option>2013</option>
+                                        <option>2014</option>
+                                        <option>2015</option>
+                                        <option>2016</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a class="panel-block" style="">
+                    Tunggakan
+                    <div class="control" style="">
+                        <div class="select is-fullwidth">
+                            <select>
+                                <option>Ya</option>
+                                <option>Tidak</option>
+                            </select>
+                        </div>
+                    </div>
+                </a>
+                <div class="panel-block">
+                    <button class="button is-link is-outlined is-fullwidth">
+                    Filter
+                    </button>
+                </div>
+            </nav>
           </ul>
         </nav>
       </aside>
@@ -115,40 +220,92 @@
             <nav class="breadcrumb has-arrow-separator" aria-label="breadcrumbs">
                 <ul>
                     <li><a href="#">Dashboard</a></li>
-                    <li><a href="#">Kelebihan Bayar</a></li>
+                    <li><a href="#">Iuran</a></li>
                 </ul>
             </nav>
           </div>
+          
+          <div class="panel column is-12">
+            <div class="panel-heading">
+                <label class="label">All Table</label>
+            </div>
+            <div class="panel-block column is-12">
+                <table id="iuran" class="table is-striped is-bordered" cellspacing="0" width="100%">
+                <thead>
+                    <tr>
+                    <th>Nama Perusahaan</th>
+                    <th>Jumlah Setoran</th>
+                    <th>Total Iuran</th>
+                    <th>Tanggal Setor Terakhir</th>
+                    <th>Apakah ada tunggakan??</th>
+                    <th>Sisa Iuran</th>
+                    </tr>
+                </thead>
+                <tfoot>
+                    <tr>
+                    <th colspan="5">Jumlah Sisa</th>
+                    <th>Rp. 2300</th>
+                    </tr>
+                </tfoot>
+                <tbody>
+                    <tr>
+                        <td style="">Dapen</td>
+                        <td style="">Rp. 200</td>
+                        <td style="">Rp. 2000</td>
+                        <td style="">February 7th, 2016</td>
+                        <td style="">Ya</td>
+                        <td style="">Rp. 1800</td>
+                    </tr>
+                    <tr>
+                        <td style="">Telkom University</td>
+                        <td style="">Rp. 2000</td>
+                        <td style="">Rp. 2000</td>
+                        <td style="">July 7th, 2016</td>
+                        <td style="">Tidak</td>
+                        <td style="">-</td>
+                    </tr>
+                    <tr>
+                        <td style="">UPI</td>
+                        <td style="">Rp. 1500</td>
+                        <td style="">Rp. 2000</td>
+                        <td style="">December 7th, 2016</td>
+                        <td style="">Ya</td>
+                        <td style="">Rp. 500</td>
+                    </tr>
+                </tbody>
+                </table>
+            </div>
+            </div>
 
-          <div class="columns">
+          <div class="columns" style="margin-left:1px; margin-right:1px;">
             <div class="panel column is-6">
                 <div class="panel-heading">
                     TOP 10
                 </div>
                 <div class="panel-block" style="width:100%;">
-                    <table id="Home" class="table is-striped is-bordered" cellspacing="0" width="100%" style="margin-left:0px; margin-bottom:-10px;">
+                    <table id="" class="table is-striped is-bordered" cellspacing="0" width="100%" style="">
                         <thead>
                             <tr>
-                                <th>Name</th>
-                                <th>Position</th>
+                                <th>Nama Perusahaan</th>
+                                <th>Sisa Iuran</th>
+                                <th>Tanggal Setor Terakhir</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Kecebong Jemping</td>
-                                <td>System Architect</td>
+                                <td>Dapen</td>
+                                <td>-</td>
+                                <td>December 7th, 2016</td>
                             </tr>
                             <tr>
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
+                                <td>Telkom</td>
+                                <td>-</td>
+                                <td>December 9th, 2016</td>
                             </tr>
                             <tr>
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
-                            </tr>
-                            <tr>
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
+                                <td>UPI</td>
+                                <td>-</td>
+                                <td>July 7th, 2017</td>
                             </tr>
                         </tbody>
                     </table>
@@ -160,29 +317,29 @@
                     BOTTOM 10
                 </div>
                 <div class="panel-block" style="width:100%;">
-                    <table id="Waris" class="table is-striped is-bordered" cellspacing="0" width="100%" style="margin-left:0px; margin-bottom:-10px;">
+                    <table id="" class="table is-striped is-bordered" cellspacing="0" width="100%" style="">
                         <thead>
                             <tr>
-                                <th>Name</th>
-                                <th>Position</th>
+                                <th>Nama Perusahaan</th>
+                                <th>Sisa Iuran</th>
+                                <th>Tanggal Setor Terakhir</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
+                                <td>Dapen</td>
+                                <td>Rp. 2000</td>
+                                <td>December 7th, 2016</td>
                             </tr>
                             <tr>
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
+                                <td>Telkom</td>
+                                <td>Rp. 1000</td>
+                                <td>December 9th, 2016</td>
                             </tr>
                             <tr>
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
-                            </tr>
-                            <tr>
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
+                                <td>UPI</td>
+                                <td>Rp. 500</td>
+                                <td>July 7th, 2016</td>
                             </tr>
                         </tbody>
                     </table>
@@ -191,12 +348,34 @@
           </div>
 
           <div class="column is-12">
-            <h2 style="font-weight:bold">History Nunggak</h2>
-            <canvas id="chartNunggak" style="margin-bottom:25px;"></canvas>
+              <div class="columns">
+                <div class="column is-2">
+                    <h2 style="font-weight:bold">History Nunggak</h2>
+                </div>
+                <div class="column is-10">
+                    <div class="field has-addons">
+                        <div class="control is-expanded">
+                            <div class="select is-fullwidth">
+                                <select name="tahun">
+                                    <option value="2010">2010</option>
+                                    <option value="2011">2011</option>
+                                    <option value="2012">2012</option>
+                                    <option value="2013">2013</option>
+                                    <option value="2014">2014</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="control">
+                            <button type="submit" class="button is-primary">Pilih</button>
+                        </div>
+                    </div>
+                </div>
+              </div>
+            <canvas id="chartNunggak" style=""></canvas>
             
             <div id="chartNunggak" class="chartNunggak"></div>
 
-             <div id="wizard" class="swMain" style="visibility:hidden">
+             <!-- <div id="wizard" class="swMain" style="visibility:hidden">
                 <div class="panel-heading">
                     BOTTOM 10
                 </div>
@@ -212,7 +391,7 @@
                         </tbody>
                     </table>
                 </div>
-             </div>
+             </div> -->
       </main>
     </div>
   </div>
@@ -223,6 +402,15 @@
   <script type="text/javascript" src="js/dataTables.bulma.min.js"></script>
   
   <script>
+      $(document).ready(function() {
+		    $('#iuran').DataTable({
+		    	"drawCallback": function( settings ) {
+	                if(!$("#iuran").parent().hasClass("table-is-responsive")){
+	                    $("#iuran").wrap('<div class="table-is-responsive"></div>');
+	                }
+            	}
+		    });
+        });
         $(document).ready(function() {
 		    $('#Home').DataTable({
 		    	"drawCallback": function( settings ) {
@@ -263,7 +451,7 @@
         data: {
             labels: ["Januari", "Februari", "Maret", "April", "Mei", "Juni", "Juli", "Agustus", "September", "Oktober", "November", "Desember"],
             datasets: [{
-                label: "Tangguhan Tahun 2018",
+                label: "Tangguhan Tahun 2010",
                 backgroundColor: [
                     'rgb(239, 231, 4)', //Kuning
                     'rgb(0, 255, 0)',   //Hijau
